# gatomia-wiki

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  index.html  pyproject.toml
.agent/rules/: constitution.md
.github/agents/: gatowiki-leaf.agent.md  gatowiki-orchestrator.agent.md  gatowiki.agent.md
.github/prompts/: gatowiki-leaf.prompt.md  gatowiki-orchestrator,prompt.md  gatowiki.prompt.md
.specify/memory/: constitution.md
base/codewiki-agent-claude-code/: .codewiki.example.yaml  ADICIONAR_APENAS_DIAGRAMAS.md  CHANGELOG.md  DIAGRAM_INTEGRATION_GUIDE.md  INDEX.md  INSTALL.md  README.md
base/codewiki-agent-claude-code/agents/: codewiki_agent.md
base/codewiki-skills-claude-code/: INDEX.md  INTERACTIVE_GUIDE.md  QUICKSTART.md  README.md  SKILL.md  analyzer-helper.md  orchestrator.py  prompt-templates.md
base/codewiki-skills-claude-code/example-output/: INDEX.md  README.md
base/codewiki-skills-claude-code/example-output/modules/cli/: README.md
base/codewiki-skills-claude-code/example-output/modules/src/: README.md
docker/: DOCKER_README.md  Dockerfile  docker-compose.yml  env.example
docs/: customizing-agents.md  github-copilot-integration.md
gatomia/: __init__.py  __main__.py  run_web_app.py
gatomia/cli/: config_manager.py  html_generator.py
gatomia/cli/commands/: config.py  publish.py
gatomia/cli/models/: config.py
gatomia/cli/utils/: fs.py  repo_validator.py  validation.py
gatomia/src/: config.py
gatomia/src/core/: cluster_modules.py  documentation_generator.py  main.py
gatomia/src/core/dependency_analyzer/: ast_parser.py  dependency_graphs_builder.py
gatomia/src/core/dependency_analyzer/analysis/: analysis_service.py  repo_analyzer.py
gatomia/src/core/dependency_analyzer/analyzers/: cpp.py  java.py  python.py  typescript.py
gatomia/src/core/dependency_analyzer/models/: analysis.py
gatomia/src/core/dependency_analyzer/utils/: logging_config.py
gatowiki/cli/: __init__.py  git_manager.py  main.py
gatowiki/cli/adapters/: doc_generator.py
gatowiki/cli/commands/: analyze.py
gatowiki/cli/models/: job.py
gatowiki/cli/utils/: api_errors.py  errors.py
gatowiki/src/: __init__.py
gatowiki/src/be/: __init__.py  cluster_modules.py  documentation_generator.py  main.py  utils.py
gatowiki/src/be/dependency_analyzer/: __init__.py  ast_parser.py  dependency_graphs_builder.py  topo_sort.py
gatowiki/src/be/dependency_analyzer/analysis/: analysis_service.py  call_graph_analyzer.py  repo_analyzer.py
gatowiki/src/be/dependency_analyzer/analyzers/: c.py  cpp.py  csharp.py  java.py  javascript.py  python.py  typescript.py
gatowiki/src/be/dependency_analyzer/models/: analysis.py
gatowiki/src/be/dependency_analyzer/utils/: logging_config.py  patterns.py
gatowiki/src/core/dependency_analyzer/: __init__.py  topo_sort.py
gatowiki/src/core/dependency_analyzer/analysis/: call_graph_analyzer.py
gatowiki/src/core/dependency_analyzer/analyzers/: c.py  csharp.py  javascript.py
gatowiki/src/fe/: __init__.py  background_worker.py  cache_manager.py  config.py  models.py  routes.py  templates.py  visualise_docs.py
gatowiki/src/web/: background_worker.py  web_app.py
specs/: design.md  requirements.md  tasks.md
specs/steering/: product.md  structure.md  tech.md
(+2 files in other folders)
